--- a/week-1-html-css/styles/general.css
+++ b/week-1-html-css/styles/general.css
@@ -7,5 +7,7 @@ p {
 body {
     margin: 0;
     padding-top: 85px;
-    padding-left: 80px;
+    padding-left: 96px;
+    padding-right: 24px;
+    background-color: rgb(248,248,248);
 }
