--- a/week-1-html-css/styles/header.css
+++ b/week-1-html-css/styles/header.css
@@ -67,6 +67,27 @@
     border-color: rgb(192,192,192);
     margin-left: -1px;
     margin-right: 10px;
+
+    position: relative;
+}
+
+.search-button .tooltip {
+    position: absolute;
+    background-color: gray;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 8px;
+    padding-right: 8px;
+    border-radius: 2px;
+    font-size: 12px;
+    bottom: -30px;
+    opacity: 0;
+    transition: opacity 0.15s;
+}
+
+.search-button:hover .tooltip {
+    opacity: 1;
 }
 
 .search-icon {
